--- a/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
+++ b/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
@@ -253,7 +253,10 @@
 
         \section*{\colorbox{blue!30}{Flannery}}
         \addcontentsline{toc}{section}{Flannery} {
-
+            \subsubsection*{1\minor\ -- 2\hearts \\ ?}
+            \begin{itemize}
+                \item 2\nt\ = \lsf \vimp
+            \end{itemize}
         }
     }
 
@@ -282,8 +285,8 @@
 
             \subsubsection*{P -- 1\hearts \\ ?}
             \begin{itemize}
-                \item 2\clubs = better hand, fit
-                \item 2\diams = mixed raise
+                \item 2\clubs = better hand, 3\hearts
+                \item 2\diams = better hand, 4+\hearts
                 \item 2\hearts = weak raise
                 \item 2\nt/3\clubs/3\diams = color + fit (2\nt = \spades)
                 \item 3\spades = Two Tiered Splinters = 4+\hearts, unspecified singleton, (10)11\dps
@@ -292,9 +295,9 @@
 
             \subsubsection*{P -- 1\spades \\ ?}
             \begin{itemize}
-                \item 2\clubs = better hand, fit
-                \item 2\diams = \trsf{\hearts} 7+
-                \item 2\hearts = mixed raise
+                \item 2\clubs = better hand, 3\spades
+                \item 2\diams = \trsf{\hearts}
+                \item 2\hearts = better hand, 4+\spades
                 \item 2\spades = weak raise
                 \item 3\clubs/3\diams/3\hearts = color + fit
                 \item 3\nt = Two Tiered Splinters = 4+\spades, unspecified singleton, (10)11\dps
@@ -464,173 +467,272 @@
                 \item cue = shortness
             \end{itemize}
         }
-
-        \chapter*{\colorbox{Plum!30}{\strut American rebid}\\
-                \colorbox{Plum!30}{\strut (with 3-card support)}}
-        \addcontentsline{toc}{chapter}{American rebid (with 3-card support)} {
-
-            2\hearts rebid with 3-card does not deny 4\spades.
-
-            Do not rebid 2\spades with 3(244).\\
-            With 43(42) rebid 1\spades, not 2\hearts.
-
-            \subsubsection*{1\clubs -- 1\hearts\\
-                            2\hearts -- ?}
-            \begin{itemize}
-                \item 2\spades = \gf
-                \item 2\nt = \inv\ \spades
-                \item 3\minor/3\hearts = \inv
-            \end{itemize}
-
-            \subsubsection*{1\clubs -- 1\hearts\\
-                            2\hearts -- 2\spades\\
-                            ?}
-            \begin{itemize}
-                \item 2\nt = 4\hearts (3\clubs = ask)
-                \item 3\clubs = 3\hearts\ + shortness (3\diams = ask, does not agree \hearts)
-                \item 3\diams = 2326
-                \item 3\hearts = 2335
-                \item 3\spades = 3325
-                \item 3\nt = 2344
-            \end{itemize}
-
-            \subsubsection*{1\clubs -- 1\hearts\\
-                            2\hearts -- 2\spades\\
-                            2\nt -- 3\clubs\\
-                            ?}
-            \begin{itemize}
-                \item 3\diams = \bal
-                \item 3\hearts = 2425
-                \item 3\spades = 1435
-                \item 3\nt = 3415
-            \end{itemize}
-
-            \subsubsection*{1\clubs -- 1\spades\\
-                            2\spades -- ?}
-            \begin{itemize}
-                \item 2\nt = \gf
-                \item 3\anysuit{x} = \inv
-            \end{itemize}
-
-            \subsubsection*{1\clubs -- 1\spades\\
-                            2\spades -- 2\nt\\
-                            ?}
-            \begin{itemize}
-                \item 3\clubs = 4\spades (3\diams = ask)
-                \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
-                \item 3\hearts = 3325
-                \item 3\spades = 3226
-                \item 3\nt = 3235
-            \end{itemize}
-
-            \subsubsection*{1\clubs -- 1\spades\\
-                            2\spades -- 2\nt\\
-                            3\clubs -- 3\diams\\
-                            ?}
-            \begin{itemize}
-                \item 3\hearts = \bal
-                \item 3\spades = 4225
-                \item 3\nt = 4135
-                \item 4\clubs = 4315
-            \end{itemize}
-
-            \subsubsection*{1\diams -- 1\hearts\\
-                            2\hearts -- ?}
-            \begin{itemize}
-                \item 2\spades = \gf
-                \item 2\nt = \inv\ \spades
-                \item 3\minor/3\hearts = \inv
-            \end{itemize}
-
-            \subsubsection*{1\diams -- 1\hearts\\
-                            2\hearts -- 2\spades\\
-                            ?}
-            \begin{itemize}
-                \item 2\nt = 4\hearts (3\clubs = ask)
-                \item 3\clubs = 3\hearts\ + shortness (3\diams = ask, does not agree \hearts)
-                \item 3\diams = 2362
-                \item 3\hearts = 2353
-                \item 3\spades = 3332
-                \item 3\nt = 2352
-            \end{itemize}
-
-            \subsubsection*{1\diams -- 1\hearts\\
-                            2\hearts -- 2\spades\\
-                            2\nt -- 3\clubs\\
-                            ?}
-            \begin{itemize}
-                \item 3\diams = 2452
-                \item 3\hearts = 1453/1444
-                \item 3\spades = 3451/4441
-            \end{itemize}
-
-            \subsubsection*{1\diams -- 1\spades\\
-                            2\spades -- ?}
-            \begin{itemize}
-                \item 2\nt = \gf
-                \item 3\anysuit{x} = \inv
-            \end{itemize}
-
-            \subsubsection*{1\diams -- 1\spades\\
-                            2\spades -- 2\nt\\
-                            ?}
-            \begin{itemize}
-                \item 3\clubs = 4\spades (3\diams = ask)
-                \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
-                \item 3\hearts = 3262
-                \item 3\spades = 3253
-                \item 3\nt = 3352
-            \end{itemize}
-
-            \subsubsection*{1\diams -- 1\spades\\
-                            2\spades -- 2\nt\\
-                            3\clubs -- 3\diams\\
-                            ?}
-            \begin{itemize}
-                \item 3\hearts = \bal
-                \item 3\spades = 4252
-                \item 3\nt = 4153
-                \item 4\clubs = 4351
-            \end{itemize}
-
-            \subsubsection*{1\hearts -- 1\spades\\
-                            2\spades -- ?}
-            \begin{itemize}
-                \item 2\nt = \gf
-                \item 3\anysuit{x} = \inv
-            \end{itemize}
-
-            \subsubsection*{1\hearts -- 1\spades\\
-                            2\spades -- 2\nt\\
-                            ?}
-            \begin{itemize}
-                \item 3\clubs = 4\spades (3\diams = ask)
-                \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
-                \item 3\hearts = 3622
-                \item 3\spades = 3523
-                \item 3\nt = 3532
-            \end{itemize}
-
-            \subsubsection*{1\hearts -- 1\spades\\
-                            2\spades -- 2\nt\\
-                            3\clubs -- 3\diams\\
-                            ?}
-            \begin{itemize}
-                \item 3\hearts = \bal
-                \item 3\spades = 4522
-                \item 3\nt = 4513
-                \item 4\clubs = 4531
-            \end{itemize}
-        }
-
-        \chapter*{\colorbox{Plum!30}{Ask shape 2\ntch\ schema}
-                \colorbox{Plum!30}{(reverses, 2/1, 2\ntch\ rebid)}}
-        \addcontentsline{toc}{chapter}{Ask shape 2\ntx\ schema (reverses, 2/1, 2\ntx\ rebid)} {
-
-        }
-
     }
 
+    \chapter*{\colorbox{Plum!30}{2 over 1 \gf}}
+    \addcontentsline{toc}{chapter}{2 over 1 \gf} {
+        After 2/1 bid, up to 3 level, we only bid our shape (not strength).
+        Then, unserious bids are used to balance.
+
+        \subsubsection*{\anysuit{x} -- 2\anysuit{y} \\ ?}
+        \begin{itemize}
+            \item 2\nt = 5332 or 5422, denies 4-card support
+            \item 3\anysuit{y} = 4-card support or 3-card support with shortness
+        \end{itemize}
+
+        \subsubsection*{\anysuit{x} -- 2\anysuit{y} 
+                        \\ 2\nt -- ?}
+        \begin{itemize}
+            \item 3\clubs = checkback
+        \end{itemize}
+
+        \subsubsection*{\anysuit{x} -- 2\anysuit{y} 
+                        \\ 2\nt -- 3\clubs \\ ?}
+        \begin{itemize}
+            \item 3\diams = 3\anysuit{y} \imp
+            \item other = denies 3\anysuit{y}
+        \end{itemize}
+    }
+
+    \chapter*{\colorbox{Plum!30}{Rebid 2\ntch}}
+    \addcontentsline{toc}{chapter}{Rebid 2\ntx} {
+        Accepting transfer agrees suit.
+
+        \subsubsection*{1\clubs -- 1\hearts \\ 2\nt -- 3\clubs}
+        \begin{itemize}
+            \item 3\diams = 3\hearts
+            \item 3\hearts = 4\spades, denies 3\hearts
+            \item 3\spades = 5\clubs
+            \item 3\nt = 4\diams
+        \end{itemize}
+
+        \subsubsection*{1\diams -- 1\hearts \\ 2\nt -- 3\clubs}
+        \begin{itemize}
+            \item 3\diams = 3\hearts
+            \item 3\hearts = 4\spades, denies 3\hearts
+            \item 3\spades = 6\diams
+            \item 3\nt = 3+\clubs
+        \end{itemize}
+
+        \subsubsection*{1\clubs -- 1\spades \\ 2\nt -- 3\clubs}
+        \begin{itemize}
+            \item 3\diams = 4\hearts, may have 3\spades
+            \item 3\hearts = 3\spades, denies 4\hearts
+            \item 3\spades = 5\clubs
+            \item 3\nt = 4\diams
+        \end{itemize}
+
+        \subsubsection*{1\diams -- 1\spades \\ 2\nt -- 3\clubs}
+        \begin{itemize}
+            \item 3\diams = 4\hearts, may have 3\spades
+            \item 3\hearts = 3\spades, denies 4\hearts
+            \item 3\spades = 6\diams
+            \item 3\nt = 3+\clubs
+        \end{itemize}
+    }
+
+    \chapter*{\colorbox{Plum!30}{\strut American rebid}\\
+                \colorbox{Plum!30}{\strut (with 3-card support)}}
+    \addcontentsline{toc}{chapter}{American rebid (with 3-card support)} {
+
+        2\hearts rebid with 3-card does not deny 4\spades.
+
+        Do not rebid 2\spades with 3(244).\\
+        With 43(42) rebid 1\spades, not 2\hearts.
+
+        \subsubsection*{1\clubs -- 1\hearts\\
+                        2\hearts -- ?}
+        \begin{itemize}
+            \item 2\spades = \gf
+            \item 2\nt = \inv\ \spades
+            \item 3\minor/3\hearts = \inv
+        \end{itemize}
+
+        \subsubsection*{1\clubs -- 1\hearts\\
+                        2\hearts -- 2\spades\\
+                        ?}
+        \begin{itemize}
+            \item 2\nt = 4\hearts (3\clubs = ask)
+            \item 3\clubs = 3\hearts\ + shortness (3\diams = ask, does not agree \hearts)
+            \item 3\diams = 2326
+            \item 3\hearts = 2335
+            \item 3\spades = 3325
+            \item 3\nt = 2344
+        \end{itemize}
+
+        \subsubsection*{1\clubs -- 1\hearts\\
+                        2\hearts -- 2\spades\\
+                        2\nt -- 3\clubs\\
+                        ?}
+        \begin{itemize}
+            \item 3\diams = \bal
+            \item 3\hearts = 2425
+            \item 3\spades = 1435
+            \item 3\nt = 3415
+        \end{itemize}
+
+        \subsubsection*{1\clubs -- 1\spades\\
+                        2\spades -- ?}
+        \begin{itemize}
+            \item 2\nt = \gf
+            \item 3\anysuit{x} = \inv
+        \end{itemize}
+
+        \subsubsection*{1\clubs -- 1\spades\\
+                        2\spades -- 2\nt\\
+                        ?}
+        \begin{itemize}
+            \item 3\clubs = 4\spades (3\diams = ask)
+            \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
+            \item 3\hearts = 3325
+            \item 3\spades = 3226
+            \item 3\nt = 3235
+        \end{itemize}
+
+        \subsubsection*{1\clubs -- 1\spades\\
+                        2\spades -- 2\nt\\
+                        3\clubs -- 3\diams\\
+                        ?}
+        \begin{itemize}
+            \item 3\hearts = \bal
+            \item 3\spades = 4225
+            \item 3\nt = 4135
+            \item 4\clubs = 4315
+        \end{itemize}
+
+        \subsubsection*{1\diams -- 1\hearts\\
+                        2\hearts -- ?}
+        \begin{itemize}
+            \item 2\spades = \gf
+            \item 2\nt = \inv\ \spades
+            \item 3\minor/3\hearts = \inv
+        \end{itemize}
+
+        \subsubsection*{1\diams -- 1\hearts\\
+                        2\hearts -- 2\spades\\
+                        ?}
+        \begin{itemize}
+            \item 2\nt = 4\hearts (3\clubs = ask)
+            \item 3\clubs = 3\hearts\ + shortness (3\diams = ask, does not agree \hearts)
+            \item 3\diams = 2362
+            \item 3\hearts = 2353
+            \item 3\spades = 3332
+            \item 3\nt = 2352
+        \end{itemize}
+
+        \subsubsection*{1\diams -- 1\hearts\\
+                        2\hearts -- 2\spades\\
+                        2\nt -- 3\clubs\\
+                        ?}
+        \begin{itemize}
+            \item 3\diams = 2452
+            \item 3\hearts = 1453/1444
+            \item 3\spades = 3451/4441
+        \end{itemize}
+
+        \subsubsection*{1\diams -- 1\spades\\
+                        2\spades -- ?}
+        \begin{itemize}
+            \item 2\nt = \gf
+            \item 3\anysuit{x} = \inv
+        \end{itemize}
+
+        \subsubsection*{1\diams -- 1\spades\\
+                        2\spades -- 2\nt\\
+                        ?}
+        \begin{itemize}
+            \item 3\clubs = 4\spades (3\diams = ask)
+            \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
+            \item 3\hearts = 3262
+            \item 3\spades = 3253
+            \item 3\nt = 3352
+        \end{itemize}
+
+        \subsubsection*{1\diams -- 1\spades\\
+                        2\spades -- 2\nt\\
+                        3\clubs -- 3\diams\\
+                        ?}
+        \begin{itemize}
+            \item 3\hearts = \bal
+            \item 3\spades = 4252
+            \item 3\nt = 4153
+            \item 4\clubs = 4351
+        \end{itemize}
+
+        \subsubsection*{1\hearts -- 1\spades\\
+                        2\spades -- ?}
+        \begin{itemize}
+            \item 2\nt = \gf
+            \item 3\anysuit{x} = \inv
+        \end{itemize}
+
+        \subsubsection*{1\hearts -- 1\spades\\
+                        2\spades -- 2\nt\\
+                        ?}
+        \begin{itemize}
+            \item 3\clubs = 4\spades (3\diams = ask)
+            \item 3\diams = 3\spades + shortness (3\hearts = ask, does not agree \spades)
+            \item 3\hearts = 3622
+            \item 3\spades = 3523
+            \item 3\nt = 3532
+        \end{itemize}
+
+        \subsubsection*{1\hearts -- 1\spades\\
+                        2\spades -- 2\nt\\
+                        3\clubs -- 3\diams\\
+                        ?}
+        \begin{itemize}
+            \item 3\hearts = \bal
+            \item 3\spades = 4522
+            \item 3\nt = 4513
+            \item 4\clubs = 4531
+        \end{itemize}
+    }
+
+    \chapter*{\colorbox{Plum!30}{Ask shape 2\ntch\ schema}
+            \colorbox{Plum!30}{(reverses, 2/1, 2\ntch\ rebid)}}
+    \addcontentsline{toc}{chapter}{Ask shape 2\ntx\ schema (reverses, 2/1, 2\ntx\ rebid)} {
+        
+        \section*{\colorbox{blue!30}{3-color auction}}
+        \addcontentsline{toc}{section}{3-color auction} {
+
+            \subsubsection*{\anysuit{x} -- \anysuit{y} \\ \anysuit{z} -- ?}
+            \begin{itemize}
+                \item 4th suit = ask for stopper, \gf
+                \item 2\nt = ask shape, \gf
+            \end{itemize}
+
+            \subsubsection*{\anysuit{x} -- \anysuit{y} \\ \anysuit{z} -- 2\nt \\ ?}
+            \begin{itemize}
+                \item 3\clubs = 3\anysuit{y}
+                \item 3\diams = 5\anysuit{x}4\anysuit{z}2\anysuit{y}2
+                \item 3\hearts = 5\anysuit{x}5\anysuit{z}2\anysuit{y}1
+                \item 3\spades = 5\anysuit{x}5\anysuit{z}1-\anysuit{y}2+
+                \item 3\nt = 5\anysuit{x}4\anysuit{z}1-\anysuit{y}3+
+            \end{itemize}
+        }
+
+        \section*{\colorbox{blue!30}{Reverses}}
+        \addcontentsline{toc}{section}{Reverses} {
+            \subsubsection*{\anysuit{x} -- \anysuit{y} \\ 
+                            \anysuit{z} -- ?}
+            \begin{itemize}
+                \item \anysuit{y} = slow down
+                \item 2\nt = ask shape
+            \end{itemize}
+
+            \subsubsection*{\anysuit{x} -- \anysuit{y} \\ 
+                            \anysuit{z} -- 2\nt \\ ?}
+            \begin{itemize}
+                \item 3\clubs = 3\anysuit{y}
+                \item 3\diams = 5\anysuit{x}4\anysuit{z}2\anysuit{y}2
+                \item 3\hearts = 6\anysuit{x}4\anysuit{z}2\anysuit{y}1
+                \item 3\spades = 6\anysuit{x}4\anysuit{z}1-\anysuit{y}
+            \end{itemize}
+        }
+    }
+
+    
     \chapter*{\colorbox{Plum!30}{1\ntch\ opening}}
     \addcontentsline{toc}{chapter}{1\ntx\ opening} {
         \subsubsection*{1\nt -- ?}
@@ -980,7 +1082,18 @@
 
         \section*{\colorbox{blue!30}{2\diams opening (Multi)}}
         \addcontentsline{toc}{section}{2\diams\ opening (Multi)} {
+            2\diams = (4)6-9, 6+\major
 
+            \subsubsection*{2\diams -- ?}
+            \begin{itemize}
+                \item 2\major = \pass/correct
+                \item 2\nt = ask, \invp
+                \item 3\clubs = \gf\ own suit
+                \item 3\diams = \inv\ both fits
+                \item 3\hearts = preempt, both fits
+            \end{itemize}
+
+            {\color{red}\textbf{TODO}}
         }
 
         \section*{\colorbox{blue!30}{3-level openings}}
@@ -1700,26 +1813,185 @@
                 \item 2\spades = weak support
             \end{itemize}
         }
+
+        {\color{red}\textbf{TODO}}
     }
 
     \chapter*{\colorbox{Plum!30}{1\ntx\ defense (Jassem)}}
     \addcontentsline{toc}{chapter}{1\ntx\ defense (Jassem)} {
-        aa
+        \subsubsection*{(1\ntx) -- ?}
+        \begin{itemize}
+            \item \dbl\ = 5\minor\ + 4\major
+            \item \dbl in balancing position = 5\minor\ + 4\major or 6\minor
+            \item 2\clubs\ = 54 \major
+            \item 2\diams\ = 6+ \major
+            \item 2\hearts\ = 5\hearts\ + 4\minor
+            \item 2\spades\ = 5\spades\ + 4\minor
+        \end{itemize}
+
+        \subsubsection*{(1\ntx) -- \dbl\ -- (P) -- ?}
+        \begin{itemize}
+            \item 2\clubs\ = \pass/correct
+            \item 2\diams\ = show major
+            \item 2\hearts\ = own suit
+            \item 2\spades\ = own suit
+        \end{itemize}
+
+        \subsubsection*{(1\ntx) -- 2\clubs\ -- (P) -- ?}
+        \begin{itemize}
+            \item 2\diams\ = show better major
+            \item 2\hearts, 2\spades\ = preference
+        \end{itemize}
+
+        \subsubsection*{(1\ntx) -- 2\diams\ -- (P) -- ?}
+        \begin{itemize}
+            \item 2\hearts\ = \pass/correct
+            \item 2\spades\ = \inv with \hearts
+        \end{itemize}
+
     }
 
-    \chapter*{\colorbox{Plum!30}{2\ntx\ defense (CRASH)}}
+    \chapter*{\colorbox{Plum!30}{2\ntch\ defense (CRASH)}}
     \addcontentsline{toc}{chapter}{2\ntx\ defense (CRASH)} {
-        aa
+        \subsubsection*{(2\nt) -- ?}
+        \begin{itemize}
+            \item \dbl = \hearts
+            \item 3\clubs = \spades
+            \item 3\diams = \twosuit{\clubs}{\spades} or \twosuit{\diams}{\hearts}
+            \item 3\hearts = \twosuit{\clubs}{\diams} or \twosuit{\hearts}{\spades}
+            \item 3\spades = \twosuit{\clubs}{\hearts} or \twosuit{\diams}{\spades}
+        \end{itemize}
+
+        Similar schema after strong 1\clubs (16+) opening.
     }
 
     \chapter*{\colorbox{Plum!30}{Michaels \textit{\&} Unusual 2\ntx}}
     \addcontentsline{toc}{chapter}{Michaels \textit{\&} Unusual 2\ntx} {
-        bb
+        {\color{red}\textbf{TODO}}
     }
 
     \chapter*{\colorbox{Plum!30}{Kokish 2\diams\ Multi (Wilkosz) defense}}
     \addcontentsline{toc}{chapter}{Kokish 2\diams\ Multi (Wilkosz) defense} {
-        bb
+        \subsubsection*{(2\diams) -- ?}
+        \begin{itemize}
+            \item \dbl = (13)14-16 \bal, no 5\major, may have minor singleton \vimp
+            \item 2\hearts = 11-15, 5+\hearts
+            \item 2\spades = 11-15, 5+\spades
+            \item 2\nt = 17-19, \bal
+            \item 3\clubs = \clubs, not 5332/5422
+            \item 3\diams = \diams, not 5332/5422
+            \item 3\hearts, 3\spades = solid suit, weaker then power double
+            \item 3\nt = \minor \vimp
+            \item 4\clubs = \clubs+\major
+            \item 4\diams = \diams+\major
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- P -- (\alrts{P}) -- ?}
+        System like after 2\diams preempt.
+
+        \subsubsection*{(2\diams) -- P -- (2\hearts) -- ?}
+        \begin{itemize}
+            \item \pass = no suitable call OR takeout with \spades shortness
+            \item \dbl = 14-16 \bal \vimp
+            \item 2\spades = 11-15, 5+\spades, may be solid 4\spades with 1-\hearts
+            \item 2\nt = 17-19, \bal
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- P -- (2\spades) -- ?}
+        \begin{itemize}
+            \item \pass = no suitable call OR takeout with \hearts shortness \imp
+            \item \dbl = takeout with \spades shortness \imp
+            \item 2\nt = 17-19, \bal
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- P -- (>2\spades) -- ?}
+        \begin{itemize}
+            \item \dbl = takeout \imp
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- P -- (2\hearts) -- P \\
+                        (P) -- ?}        
+        \begin{itemize}
+            \item 2\nt = \minor
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- \dbl -- (\rdbl/\pass) -- ?}        
+        \begin{itemize}
+            \item \pass = want to defend, doubles are penalty
+            \item 2\major = 5+\major, to play
+            \item 2\nt = Lebensohl (see below)
+            \item 3\clubs = Stayman \vimp
+            \item 3\diams = \trsf{\hearts}, \gf\ + superaccepts
+            \item 3\hearts = \trsf{\spades}, \gf\ + superaccepts
+            \item 3\spades = \trsf{\nt}, no \major stoppers
+            \item 4\diams, 4\hearts = Texas
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- \dbl -- (\rdbl/\pass) -- 2\nt \\
+                        (P) -- 3\clubs -- (P) -- ?}        
+        \begin{itemize}
+            \item \pass = to play
+            \item 3\diams = \gf, no 4\major \vimp
+            \item 3\hearts, 3\spades = \inv
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- \dbl -- (\hearts/\spades) -- ?}        
+        \begin{itemize}
+            \item \dbl = 9+, \fton{2\nt}, no 5\major, no \major shortness
+            \item 2\nt = Lebensohl (see below)
+            \item 3\clubs = Stayman \vimp
+            \item 3\diams = \trsf{\hearts}, \gf\ + superaccepts
+            \item 3\hearts = \trsf{\spades}, \gf\ + superaccepts
+            \item 3\spades = takeout with opps' suit shortness, \gf
+            \item 4\diams, 4\hearts = Texas
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- \dbl -- (2\hearts/\spades) -- 2\nt \\
+                        (P) -- 3\clubs -- (P) -- ?}        
+        \begin{itemize}
+            \item \pass/3\diams = to play
+            \item 3\hearts, 3\spades = \inv
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- \dbl -- (2\hearts/\spades) -- \dbl \\
+                        (P) -- ?}        
+        \begin{itemize}
+            \item \pass = to play
+            \item 2\spades = 4\spades, \fonce
+            \item 2\nt = \nat, minimum
+            \item 3\clubs = \nat, minimum
+            \item 3\diams = \nat, minimum
+            \item 3\hearts over 2\spades = \nat, minimum
+            \item cue 3\hearts, 3\spades = maximum, no stopper, no 4\spades
+            \item 3\nt = maximum, stopper, no 4\spades
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- \dbl -- (2\hearts) -- \dbl \\
+                        (2\spades) -- ?}        
+        \begin{itemize}
+            \item \pass = \fonce
+            \item \dbl = penalty
+            \item 2\nt = do not want to defend, \gf
+            \item 3\clubs = \nat, \gf
+            \item 3\diams = \nat, \gf
+            \item 3\hearts = \nat, \gf
+            \item 3\spades = maximum, no \spades stopper
+            \item 3\nt = maximum, stopper
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- \dbl -- (2\hearts) -- \dbl \\
+                        (2\spades) -- P -- (P) -- ?}
+        \begin{itemize}
+            \item 3\spades = \spades shortness, \gf %%% Can be ask for stop??
+        \end{itemize}
+
+        \subsubsection*{(2\diams) -- \dbl -- (2\spades) -- \dbl \\
+                        (3\hearts) -- ?}  
+        \begin{itemize}
+            \item \pass = 14-16, no 4\spades OR power double, \fonce
+            \item \dbl = 14-16, 4\spades, defensive
+            
+        \end{itemize}
     }
 }
 
