--- a/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
+++ b/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
@@ -24,7 +24,7 @@
         \begin{itemize}
             \item 1\clubs = 2+ (Strefa)
             \item 1\diams = 4+ (1\clubs does not deny 4\diams)
-            \item weak 1\nt 11-14 (\nvul{non-vul})
+            % \item weak 1\nt 11-14 (\nvul{non-vul})
             \item Swedish 2\major openings (10-13)
             \item 2\diams Multi
             \item strong 2\nt (20-21)
@@ -51,7 +51,6 @@
     \addcontentsline{toc}{section}{Defensive bidding}
 
         \begin{itemize}
-            \item Rubens advances
             \item Jassem 1\nt defense
             \item CRASH 2\nt defense
             \item Michaels -- full range (not mini-maxi)
@@ -1800,22 +1799,22 @@
 \part*{\colorbox{RoyalPurple!30}{Defensive bidding}}
 \addcontentsline{toc}{part}{Defensive bidding} {
     
-    \chapter*{\colorbox{Plum!30}{Rubens advances}}
-    \addcontentsline{toc}{chapter}{Rubens advances} {
-        \section*{\colorbox{blue!30}{After 1\clubs\ opening}}
-        \addcontentsline{toc}{section}{After 1\clubs\ opening} {
+    % \chapter*{\colorbox{Plum!30}{Rubens advances}}
+    % \addcontentsline{toc}{chapter}{Rubens advances} {
+    %     \section*{\colorbox{blue!30}{After 1\clubs\ opening}}
+    %     \addcontentsline{toc}{section}{After 1\clubs\ opening} {
 
-            \subsubsection*{(1\clubs) -- 1\spades -- (P) -- ?}
-            \begin{itemize}
-                \item 2\clubs = \trsf{\diams}
-                \item 2\diams = \trsf{\hearts}
-                \item 2\hearts = \trsf{\spades}
-                \item 2\spades = weak support
-            \end{itemize}
-        }
+    %         \subsubsection*{(1\clubs) -- 1\spades -- (P) -- ?}
+    %         \begin{itemize}
+    %             \item 2\clubs = \trsf{\diams}
+    %             \item 2\diams = \trsf{\hearts}
+    %             \item 2\hearts = \trsf{\spades}
+    %             \item 2\spades = weak support
+    %         \end{itemize}
+    %     }
 
-        {\color{red}\textbf{TODO}}
-    }
+    %     {\color{red}\textbf{TODO}}
+    % }
 
     \chapter*{\colorbox{Plum!30}{1\ntx\ defense (Jassem)}}
     \addcontentsline{toc}{chapter}{1\ntx\ defense (Jassem)} {
