--- a/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
+++ b/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
@@ -80,7 +80,7 @@
             \subsubsection*{1\clubs\ -- \alrts{2\clubs} \\ ?}
             2\clubs = \gf\ \nat\ or \bal
             \begin{itemize}
-                \item 2\diams\ = \bal
+                \item 2\diams\ = \bal (may have 4\major)
                 \item 2\major = 5\clubs4\major
                 \item 2\nt\ = 5\clubs4\diams
                 \item 3\clubs\ = \clubs
