--- a/KrysiaBartek2024/SYSTEM/strefa_Zaczek.tex
+++ b/KrysiaBartek2024/SYSTEM/strefa_Zaczek.tex
@@ -200,9 +200,9 @@
 
     \subsubsection*{2\clubs\ -- ?}
     \begin{itemize}
-        \item 2\diams\ = 0-1 controls (2\hearts = Kokish relay)
-        \item 2\hearts\ = 2 controls (potem \nat)
-        \item 2\spades = 3+ controls (potem \nat)
+        \item 2\diams\ = 0-1 kontrole (2\hearts = Kokish relay)
+        \item 2\hearts\ = 2 kontrole (potem \nat)
+        \item 2\spades = 3+ kontrole (potem \nat)
         \item 2\nt/3\clubs/3\diams/3\hearts = \clubs/\diams/\hearts/\spades, własny bardzo dobry kolor
     \end{itemize}
 
@@ -322,6 +322,8 @@
         \item 3\diams = 5\spades, \gf, \lsf
         \item 3\hearts = 4\spades, \gf
     \end{itemize}
+
+    -------------------------------------------\\
 
     {\large wersja 2 (pełna)}
     \subsubsection*{1\clubs -- 1\hearts\\
@@ -481,13 +483,13 @@
 
     \subsubsection*{1\hearts\ -- 1\spades\ \\ ?}
     \begin{itemize}
-        \item 2\clubs\ = 5\hearts4\clubs\ 11-15 OR 16+ HCP \fonce
+        \item 2\clubs\ = 5\hearts4\clubs\ 11-15 lub 16+ HCP \fonce
         \item 2\nt = 6\hearts4\minor, 15+
     \end{itemize}
 
     \subsubsection*{1\hearts\ -- 1\ntx\ \\ ?}
     \begin{itemize}
-        \item 2\clubs\ = 5\hearts\clubs\ 11-15 OR 16+ HCP \fonce
+        \item 2\clubs\ = 5\hearts\clubs\ 11-15 lub 16+ HCP \fonce
         \item 2\diams\ = 5\hearts4\diams\ 11-15
         \item 2\hearts\ = 11-15
         \item 2\spades\ = 6\hearts5\spades\ \gf
@@ -515,7 +517,7 @@
     \begin{itemize}
         \item \diams\ = 8+
         \item \hearts\ = 2\hearts\ 5-7
-        \item \spades\ = good 5\spades\ 5-7
+        \item \spades\ = dobre 5\spades\ 5-7
         \item 2\ntx\ = 1-\hearts\ 5-7
         \item 3\clubs\ = 6+\clubs\ 5-7
         \item 3\diams\ = 6+\diams\ 5-7
@@ -623,7 +625,7 @@
 
     \subsubsection*{1\diams -- 1\spades \\ 2\hearts}
     \begin{itemize}
-        \item 2\spades = slow down
+        \item 2\spades = slow down (minimum -- do 7pc, zwalnia z GF, pozostałe odzywki są już \gf)
         \item 2\nt = \gf
     \end{itemize}
 }
