--- a/KrysiaBartek2024/SYSTEM/strefa_Zaczek.tex
+++ b/KrysiaBartek2024/SYSTEM/strefa_Zaczek.tex
@@ -904,4 +904,56 @@
     \end{itemize}
 }
 
+\section*{\colorbox{blue!30}{Transfery po wejściach kontrą}}
+\addcontentsline{toc}{section}{Transfery po wejściach} {
+
+    \subsubsection*{1\clubs -- (\dbl) -- ?}
+    \begin{itemize}
+        \item \rdbl = 10+
+        \item 1\diams/1\hearts/1\spades = \trsf{\hearts/\spades/\nt} 4+
+        \item 1\nt = 7-11
+        \item 2\clubs/2\diams/2\hearts/2\spades = \trsf{\diams/\hearts/\spades/\clubs} 6+, słabe/\gf
+        \item 2\nt = \minor słabe/\gf
+        \item 3\clubs/3\diams = \inv
+    \end{itemize}
+
+    \subsubsection*{1\diams -- (\dbl) -- ?}
+    \begin{itemize}
+        \item \rdbl = 10+
+        \item 1\hearts/1\spades = 7+\hcp, 4+
+        \item 1\nt = 7-11
+        \item 2\clubs = \diams słabe/\gf
+        \item 2\diams/2\hearts/2\spades = \trsf{\hearts/\spades/\clubs} 6+, słabe/\gf
+        \item 2\nt = 4+\diams, \invp
+        \item 3\clubs = \inv
+        \item 3\diams = blok
+    \end{itemize}
+
+
+    \subsubsection*{1\hearts -- (\dbl) -- ?}
+    \begin{itemize}
+        \item \rdbl = 10+ (may have 3\hearts)
+        \item 1\spades = \nat, 4+\spades, \fonce
+        \item 1\nt = \trsf{2\clubs}
+        \item 2\clubs = \trsf{2\diams}
+        \item 2\diams = \trsf{2\hearts} konstruktywne / \gf
+        \item 2\hearts = 3-6, 3\hearts
+        \item \small{SYSTEM ON}
+    \end{itemize}
+
+
+
+    \subsubsection*{1\spades -- (\dbl) -- ?}
+    \begin{itemize}
+        \item \rdbl = 10+ (may have 3\spades)
+        \item 1\nt = \trsf{2\clubs}
+        \item 2\clubs = \trsf{2\diams}
+        \item 2\diams = \trsf{2\hearts}
+        \item 2\hearts = \trsf{2\spades} konstruktywne / \gf
+        \item 2\spades = 3-6, 3\spades
+        \item \small{SYSTEM ON}
+    \end{itemize}
+
+}
+
 \end{document}
