--- a/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
+++ b/KrysiaBartek2024/SYSTEM/krysia_kacper_general.tex
@@ -394,7 +394,7 @@
             \begin{itemize}
                 \item 3\hearts = weak
                 \item 3\spades = better hand, no shortness
-                \item 3\nt/4\minor = shortness (3\nt = \spades \shortness)
+                \item 3\nt/4\minor = shortness (3\nt = \spades shortness)
             \end{itemize}
         }
 
