--- a/KrysiaBartek2024/OldSystemFiles/others/gazilli_09_2024.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/gazilli_09_2024.tex
@@ -14,7 +14,7 @@
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
-    urlcolor=cyan,
+    urlcolor=blue,
     }
 
 \urlstyle{same}
@@ -30,8 +30,7 @@
 \maketitle
 
 \begin{formal}
-Wykład: \href{https://www.youtube.com/@multi2diamonds}{nagranie}, 
-\href{https://docs.google.com/presentation/d/1v0ixVhsnCNkZk1ckHag8bozFfjcQ0ZeFr_HqXATM9Xk/edit?usp=sharing}{slajdy}
+\href{https://www.youtube.com/@multi2diamonds}{nagranie wykładu} 
 \vspace{0.3cm}
 \end{formal}
 
